feature/Restore attending players
Persists the attending status of players and restores it